fixed spacing issue

--- a/truckin.css
+++ b/truckin.css
@@ -109,9 +109,9 @@ div.iphone-image img {
 }
 
 
-div.dots-white-1 img {
+div.dots-white-1 {
     margin-top: 80px;
-    margin-left: 250px;
+    text-align: center;
 }
 
 div.introduction {
@@ -127,12 +127,12 @@ div.problem {
     font-family: 'Cormorant Garamond', serif;
     font-size: 25px;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 5px;
     
 }
 
 div.problem-dots-white, div.problem-body {
-    margin-top: 60px;
+    margin-top: 40px;
     text-align: center;
 }
 
@@ -164,11 +164,10 @@ div.survey-intro {
     text-align: center;
 }
 
-div.dots-white-2 img {
+div.dots-white-2 {
     text-align: center;
     margin-top: 40px;
     margin-bottom: 40px;
-    margin-left: 250px;
 }
 
 div.survey-list p {
@@ -571,7 +570,6 @@ div.footer {
     font-size: 20px;
     color: #4A4A4A;
 }
-
 
 
 
